// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Get All Post Controller Snapshot Test for author not found. 1`] = `
{
  "body": {
    "message": "User doesn't exist. Please create your account.",
    "success": false,
  },
  "status": 404,
}
`;

exports[`Get All Post Controller Snapshot Test for internal server error. 1`] = `
{
  "body": {
    "message": "Oops! Something went wrong while finding all post.",
    "success": false,
  },
  "status": 500,
}
`;

exports[`Get All Post Controller Snapshot Test for not valid user Id. 1`] = `
{
  "body": {
    "message": "Invalid userID.",
    "success": false,
  },
  "status": 400,
}
`;

exports[`Get All Post Controller Snapshot Test for post article found successfully. 1`] = `
{
  "body": {
    "data": {
      "_id": "69a8652b69726b384c21b27d",
      "author": "507f1f77bcf86cd799439011",
      "comments": 12,
      "createdAt": "2026-03-04T17:00:19.599Z",
      "deletedAt": null,
      "description": "postDescription",
      "isPinned": false,
      "isTrashed": false,
      "likes": 924,
      "title": "postTitle",
      "updatedAt": "2026-03-04T17:00:19.599Z",
    },
    "message": "All post article found successfully.",
    "success": true,
  },
  "status": 200,
}
`;

exports[`Get All Post Controller Snapshot Test for post article not found. 1`] = `
{
  "body": {
    "data": [],
    "message": "No post article added yet.",
    "success": true,
  },
  "status": 200,
}
`;

exports[`Get All Post Controller Snapshot Test for user Id not found. 1`] = `
{
  "body": {
    "message": "Oops! user ID is not found.",
    "success": false,
  },
  "status": 400,
}
`;
